deployment/dev/consumer-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consumer-ui
    app.kubernetes.io/instance: consumer-ui
  name: consumer-ui
  namespace: product-material-pass
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: consumer-ui
  template:
    metadata:
      labels:
        app: consumer-ui
    spec:
      containers:
        - image: muhammadsaudkhan/consumer-ui
          imagePullPolicy: Always
          name: consumer-ui
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
