deployment/dev/consumer-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consumer-ui
    app.kubernetes.io/instance: consumer-ui
  name: consumer-ui
  namespace: product-material-pass
spec:
  ports:
    - name: http
      port: 8080        # host port
      protocol: TCP
      targetPort: 80    # container port
  selector:
    app: consumer-ui
  type: NodePort
